--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,33 @@
+bcrypt==3.2.0
+certifi==2021.5.30
+cffi==1.14.6
+chardet==4.0.0
+click==8.0.1
+colorama==0.4.4
+cryptography==3.4.7
+dnspython==2.1.0
+email-validator==1.1.3
+Flask==2.0.1
+Flask-SQLAlchemy==2.5.1
+Flask-WTF==0.15.1
+flaskapp==1.0.5
+greenlet==1.1.0
+idna==2.10
+importlib-metadata==4.6.0
+itsdangerous==2.0.1
+Jinja2==3.0.1
+MarkupSafe==2.0.1
+pathlib==1.0.1
+pycparser==2.20
+requests==2.25.1
+six==1.16.0
+typing-extensions==3.10.0.0
+urllib3==1.26.6
+Werkzeug==2.0.1
+zipp==3.5.0
+twilio==6.63.0
 WTForms==2.3.3
 Flask_Cors==3.0.10
-Flask==2.0.1
 WTForms_JSON==0.3.3
 Flask_Login==0.5.0
 Flask_Bcrypt==0.7.1
@@ -8,5 +35,4 @@ PyMySQL==1.0.2
 requests==2.26.0
 SQLAlchemy==1.4.23
 python-dotenv==0.19.0
-twilio==6.63.1
 gunicorn
